--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <script type='text/javascript' src='./jquery-2.1.4.min.js'></script>
 <script type='text/javascript' src='./jQuery.tubeplayer.min.js'></script>
+<!-- <link rel="stylesheet" type="text/css" href="./style.css"> -->
 
 <body>
 
-<h1>The weird part of youtube</h1>
+<h1>The Weird Part of YouTube</h1>
 
 <div  id='youtube-player-container'> </div>
 <input type="text" ID="videoID">
