New, WiErD css/html

--- a/index.html
+++ b/index.html
@@ -2,29 +2,51 @@
 <html>
 <script type='text/javascript' src='./jquery-2.1.4.min.js'></script>
 <script type='text/javascript' src='./jQuery.tubeplayer.min.js'></script>
-<!-- <link rel="stylesheet" type="text/css" href="./style.css"> -->
+<link rel="stylesheet" type="text/css" href="./style.css">
 
 <body>
-
+<div  id='title'>
 <h1>The Weird Part of YouTube</h1>
-
+</div>
+<div id='theatre-box'>
 <div  id='youtube-player-container'> </div>
 <input type="text" ID="videoID">
 <a href="#" onClick='jQuery("#youtube-player-container").tubeplayer("play", document.getElementById("videoID").value)'> 
 	<button type="button" id='play'>Change video</button>
 </a>
+</div>
+    <a class="button" onclick="document.querySelector('#theatre-box').style.visibility = 'visible';
+    document.querySelector('#title').style.visibility = 'hidden';">
+        <span>Get Weird</span>
+    </a>
 </body>
 <script type="text/javascript">jQuery("#youtube-player-container").tubeplayer({
-	width: 600, // the width of the player
-	height: 450, // the height of the player
+	width: 800, // the width of the player
+	height: 600, // the height of the player
 	allowFullScreen: "true", // true by default, allow user to go full screen
-	initialVideo: "M7lc1UVf-VE", // the video that is loaded into the player
+	initialVideo: "WWum0VRc6MI", // the video that is loaded into the player
 	preferredQuality: "default",// preferred quality: default, small, medium, large, hd720
 	onPlay: function(id){}, // after the play method is called
 	onPause: function(){}, // after the pause method is called
 	onStop: function(){}, // after the player is stopped
 	onSeek: function(time){}, // after the video has been seeked to a defined point
-	onMute: function(){}, // after the player is muted
+	onMute: function(){},
+	onPlayerEnded: function(){
+		var theatrebox = document.querySelector("#theatre-box");
+		theatrebox.style.visibility = "hidden";
+
+
+		var title = document.querySelector("#title");
+		title.style.visibility = "visible";		
+	},
+	onPlayerPlaying: function(){
+		var theatrebox = document.querySelector("#theatre-box");
+		theatrebox.style.visibility = "visibile";
+
+
+		var title = document.querySelector("#title");
+		title.style.visibility = "hidden";
+	}, // after the player is muted
 	onUnMute: function(){} // after the player is unmuted
 });</script>
 </html>
